export top10 communities dataset for visualization

--- a/notebooks/data_processing/process_1_clean_data.ipynb
+++ b/notebooks/data_processing/process_1_clean_data.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,6 +456,48 @@
     "df_bike_rental_weekday_agg_filtered.to_csv(f'{output_dir}2023_processed_weekday_agg.csv', index=False)\n",
     "df_bike_rental_weekend_agg_filtered.to_csv(f'{output_dir}2023_processed_weekend_agg.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\seung\\AppData\\Local\\Temp\\ipykernel_15024\\2781945867.py:8: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df_bike_rental_agg_filtered.loc[:,'rent_datetime_30min'] = pd.to_datetime(df_bike_rental_agg_filtered.loc[:,'rent_datetime_30min'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Resampling the aggregated data for visualization (deck.gl)\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "output_dir = '../../data/bike_rental_history/processed_30min_aggregated/'\n",
+    "df_bike_rental_agg_filtered = pd.read_csv(f'{output_dir}2023_processed_weekday_agg.csv')\n",
+    "df_bike_rental_agg_filtered.loc[:,'rent_datetime_30min'] = pd.to_datetime(df_bike_rental_agg_filtered.loc[:,'rent_datetime_30min'])\n",
+    "df_bike_rental_agg_filtered.loc[:,'date'] = df_bike_rental_agg_filtered.loc[:,'rent_datetime_30min'].dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bike_rental_agg_filtered.sample(frac = 1/df_bike_rental_agg_filtered.loc[:,'date'].nunique()).drop(columns=['date']).to_json(f'{output_dir}2023_processed_weekday_agg_sample.json', orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
