re-process datasets for making the visualization part more efficient

--- a/notebooks/data_processing/process_1_clean_data.ipynb
+++ b/notebooks/data_processing/process_1_clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -122,6 +122,7 @@
        "      <th>weekday</th>\n",
        "      <th>date</th>\n",
        "      <th>bike_type</th>\n",
+       "      <th>rent_datetime_30min</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -139,6 +140,7 @@
        "      <td>6</td>\n",
        "      <td>2023-01-01</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -154,6 +156,7 @@
        "      <td>6</td>\n",
        "      <td>2023-01-01</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -169,6 +172,7 @@
        "      <td>6</td>\n",
        "      <td>2023-01-01</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -184,6 +188,7 @@
        "      <td>6</td>\n",
        "      <td>2023-01-01</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -199,9 +204,11 @@
        "      <td>6</td>\n",
        "      <td>2023-01-01</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2023-01-01 00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -229,6 +236,7 @@
        "      <td>6</td>\n",
        "      <td>2023-12-31</td>\n",
        "      <td>일반자전거</td>\n",
+       "      <td>2023-12-31 23:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36695290</th>\n",
@@ -244,6 +252,7 @@
        "      <td>6</td>\n",
        "      <td>2023-12-31</td>\n",
        "      <td>일반자전거</td>\n",
+       "      <td>2023-12-31 23:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36695291</th>\n",
@@ -259,6 +268,7 @@
        "      <td>6</td>\n",
        "      <td>2023-12-31</td>\n",
        "      <td>일반자전거</td>\n",
+       "      <td>2023-12-31 23:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36695292</th>\n",
@@ -274,6 +284,7 @@
        "      <td>6</td>\n",
        "      <td>2023-12-31</td>\n",
        "      <td>일반자전거</td>\n",
+       "      <td>2023-12-31 23:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36695293</th>\n",
@@ -289,30 +300,57 @@
        "      <td>6</td>\n",
        "      <td>2023-12-31</td>\n",
        "      <td>일반자전거</td>\n",
+       "      <td>2023-12-31 23:30:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>36695294 rows × 12 columns</p>\n",
+       "<p>36695294 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            bike_id       rent_datetime     return_datetime birth_year gender user_type origin_station_id desti_station_id  year  weekday        date bike_type\n",
-       "0         SPB-39194 2023-01-01 00:02:13 2023-01-01 00:02:43       1977     \\N       내국인           ST-2127          ST-2127  2023        6  2023-01-01       NaN\n",
-       "1         SPB-43457 2023-01-01 00:01:20 2023-01-01 00:03:28       1998     \\N       내국인           ST-1121          ST-2699  2023        6  2023-01-01       NaN\n",
-       "2         SPB-44383 2023-01-01 00:04:01 2023-01-01 00:04:21       1993      M       내국인           ST-1590          ST-1590  2023        6  2023-01-01       NaN\n",
-       "3         SPB-37186 2023-01-01 00:02:09 2023-01-01 00:04:59       1965      M       내국인           ST-1841          ST-2740  2023        6  2023-01-01       NaN\n",
-       "4         SPB-59440 2023-01-01 00:02:24 2023-01-01 00:05:02       1986      M       내국인           ST-1215           ST-827  2023        6  2023-01-01       NaN\n",
-       "...             ...                 ...                 ...        ...    ...       ...               ...              ...   ...      ...         ...       ...\n",
-       "36695289  SPB-59455 2023-12-31 23:54:53 2024-01-01 00:23:39       1991      M       내국인           ST-1274          ST-1274  2023        6  2023-12-31     일반자전거\n",
-       "36695290  SPB-31699 2023-12-31 23:57:24 2024-01-01 00:24:22       1985     \\N       내국인           ST-1651          ST-2819  2023        6  2023-12-31     일반자전거\n",
-       "36695291  SPB-69751 2023-12-31 23:56:19 2024-01-01 00:25:30       1983     \\N       내국인            ST-769          ST-1559  2023        6  2023-12-31     일반자전거\n",
-       "36695292  SPB-36733 2023-12-31 23:58:28 2024-01-01 00:27:33       1994     \\N       내국인           ST-3137          ST-3146  2023        6  2023-12-31     일반자전거\n",
-       "36695293  SPB-38248 2023-12-31 23:59:26 2024-01-01 00:29:24       1969      M       내국인           ST-2602          ST-1864  2023        6  2023-12-31     일반자전거\n",
+       "            bike_id       rent_datetime     return_datetime birth_year gender  \\\n",
+       "0         SPB-39194 2023-01-01 00:02:13 2023-01-01 00:02:43       1977     \\N   \n",
+       "1         SPB-43457 2023-01-01 00:01:20 2023-01-01 00:03:28       1998     \\N   \n",
+       "2         SPB-44383 2023-01-01 00:04:01 2023-01-01 00:04:21       1993      M   \n",
+       "3         SPB-37186 2023-01-01 00:02:09 2023-01-01 00:04:59       1965      M   \n",
+       "4         SPB-59440 2023-01-01 00:02:24 2023-01-01 00:05:02       1986      M   \n",
+       "...             ...                 ...                 ...        ...    ...   \n",
+       "36695289  SPB-59455 2023-12-31 23:54:53 2024-01-01 00:23:39       1991      M   \n",
+       "36695290  SPB-31699 2023-12-31 23:57:24 2024-01-01 00:24:22       1985     \\N   \n",
+       "36695291  SPB-69751 2023-12-31 23:56:19 2024-01-01 00:25:30       1983     \\N   \n",
+       "36695292  SPB-36733 2023-12-31 23:58:28 2024-01-01 00:27:33       1994     \\N   \n",
+       "36695293  SPB-38248 2023-12-31 23:59:26 2024-01-01 00:29:24       1969      M   \n",
        "\n",
-       "[36695294 rows x 12 columns]"
+       "         user_type origin_station_id desti_station_id  year  weekday  \\\n",
+       "0              내국인           ST-2127          ST-2127  2023        6   \n",
+       "1              내국인           ST-1121          ST-2699  2023        6   \n",
+       "2              내국인           ST-1590          ST-1590  2023        6   \n",
+       "3              내국인           ST-1841          ST-2740  2023        6   \n",
+       "4              내국인           ST-1215           ST-827  2023        6   \n",
+       "...            ...               ...              ...   ...      ...   \n",
+       "36695289       내국인           ST-1274          ST-1274  2023        6   \n",
+       "36695290       내국인           ST-1651          ST-2819  2023        6   \n",
+       "36695291       내국인            ST-769          ST-1559  2023        6   \n",
+       "36695292       내국인           ST-3137          ST-3146  2023        6   \n",
+       "36695293       내국인           ST-2602          ST-1864  2023        6   \n",
+       "\n",
+       "                date bike_type rent_datetime_30min  \n",
+       "0         2023-01-01       NaN 2023-01-01 00:00:00  \n",
+       "1         2023-01-01       NaN 2023-01-01 00:00:00  \n",
+       "2         2023-01-01       NaN 2023-01-01 00:00:00  \n",
+       "3         2023-01-01       NaN 2023-01-01 00:00:00  \n",
+       "4         2023-01-01       NaN 2023-01-01 00:00:00  \n",
+       "...              ...       ...                 ...  \n",
+       "36695289  2023-12-31     일반자전거 2023-12-31 23:30:00  \n",
+       "36695290  2023-12-31     일반자전거 2023-12-31 23:30:00  \n",
+       "36695291  2023-12-31     일반자전거 2023-12-31 23:30:00  \n",
+       "36695292  2023-12-31     일반자전거 2023-12-31 23:30:00  \n",
+       "36695293  2023-12-31     일반자전거 2023-12-31 23:30:00  \n",
+       "\n",
+       "[36695294 rows x 13 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -431,21 +469,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "threshold = 3\n",
     "df_bike_rental_agg_filtered = df_bike_rental_agg[df_bike_rental_agg['count'] >= threshold]\n",
@@ -458,19 +484,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\seung\\AppData\\Local\\Temp\\ipykernel_15024\\2781945867.py:8: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
-      "  df_bike_rental_agg_filtered.loc[:,'rent_datetime_30min'] = pd.to_datetime(df_bike_rental_agg_filtered.loc[:,'rent_datetime_30min'])\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Resampling the aggregated data for visualization (deck.gl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## Resampling the aggregated data for visualization (deck.gl)\n",
     "\n",
@@ -485,19 +509,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bike_rental_agg_filtered.sample(frac = 1/df_bike_rental_agg_filtered.loc[:,'date'].nunique()).drop(columns=['date']).to_json(f'{output_dir}2023_processed_weekday_agg_sample.json', orient='records')"
+    "df_bike_rental_agg_filtered = df_bike_rental_agg_filtered.loc[:,['origin_station_id', 'desti_station_id','count']].groupby(['origin_station_id', 'desti_station_id'], as_index=False).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_bike_rental_agg_filtered.to_csv(f'{output_dir}2023_processed_weekday_agg_sample.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aggregate the weekday sample into 30min unit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df_bike_rental_weekday = pd.read_csv('../../data/bike_rental_history/processed_sample/2023_processed_weekday_sample.csv', parse_dates=['rent_datetime', 'return_datetime'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def datetime_to_minute_of_day(dt):\n",
+    "    return dt.hour * 60 + dt.minute\n",
+    "\n",
+    "def datetime_to_hour(dt):\n",
+    "    return dt.hour\n",
+    "\n",
+    "df_bike_rental_weekday.loc[:,'rent_hour'] = df_bike_rental_weekday.loc[:,'rent_datetime'].apply(datetime_to_hour)\n",
+    "df_bike_rental_weekday.loc[:,'return_hour'] = df_bike_rental_weekday.loc[:,'return_datetime'].apply(datetime_to_hour)\n",
+    "df_bike_rental_weekday.loc[:,'rent_minute_of_day'] = df_bike_rental_weekday.loc[:,'rent_datetime'].apply(datetime_to_minute_of_day)\n",
+    "df_bike_rental_weekday.loc[:,'return_minute_of_day'] = df_bike_rental_weekday.loc[:,'return_datetime'].apply(datetime_to_minute_of_day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bike_rental_weekday = df_bike_rental_weekday.drop(columns=['bike_type','rent_datetime', 'return_datetime', 'date', 'year', 'weekday','bike_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_bike_rental_weekday.to_csv('../../data/bike_rental_history_weekday_sample.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
