Calcuate path of the routes in Magok bike usage

--- a/notebooks/data_processing/mapping_route.ipynb
+++ b/notebooks/data_processing/mapping_route.ipynb
@@ -2,27 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "\n",
+    "import configparser\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read('../../config.ini')\n",
+    "\n",
+    "import geopandas as gpd\n",
+    "from shapely.geometry import LineString"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_magok_trips_peak = pd.read_json('../../data/bike_rental_history_weekday_community_peak.json')\n",
     "df_magok_trips_peak = df_magok_trips_peak.loc[df_magok_trips_peak.loc[:,'origin_station_id'] != df_magok_trips_peak.loc[:,'desti_station_id'], :]\n",
+    "df_magok_trips_peak = df_magok_trips_peak.loc[(df_magok_trips_peak.loc[:,'return_minute_of_day'] - df_magok_trips_peak.loc[:,'rent_minute_of_day']>0) , :]\n",
     "df_magok_trips_peak = df_magok_trips_peak.loc[df_magok_trips_peak.loc[:,'community']==0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +204,7 @@
        "4             19.851351  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,11 +215,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_magok_trips_peak['route'] = df_magok_trips_peak.apply(lambda x: f\"{x['origin_station_id']}~{x['desti_station_id']}\", axis=1)"
+    "df_magok_trips_peak.loc[:,'route'] = df_magok_trips_peak.apply(lambda x: f\"{x['origin_station_id']}~{x['desti_station_id']}\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"https://apis-navi.kakaomobility.com/v1/directions?origin={},{}&destination={},{}&avoid=motorway\"\n",
+    "api_key = config['kakao']['key']\n",
+    "headers = {\"Authorization\": \"KakaoAK \" + api_key}\n",
+    "list_path = []\n",
+    "i=0\n",
+    "for route in df_magok_trips_peak.loc[:,'route'].unique().tolist():\n",
+    "    start_station, end_station = route.split('~')\n",
+    "    start_x, start_y = df_magok_trips_peak.loc[df_magok_trips_peak.loc[:,'origin_station_id']==start_station,['origin_lng', 'origin_lat']].values[0]\n",
+    "    end_x, end_y =df_magok_trips_peak.loc[df_magok_trips_peak.loc[:,'desti_station_id']==end_station,['desti_lng','desti_lat']].values[0]\n",
+    "    url_format = url.format(start_x, start_y, end_x, end_y)\n",
+    "\n",
+    "    result = requests.get(url_format, headers=headers).json()\n",
+    "    try:\n",
+    "        nested_path = [i['vertexes'] for i in result['routes'][0]['sections'][0]['roads']]\n",
+    "        flatten_path = [coord for sublist in nested_path for coord in sublist]\n",
+    "        path = [[flatten_path[i], flatten_path[i+1]] for i in range(0, len(flatten_path), 2)]\n",
+    "    except:\n",
+    "        print(result)\n",
+    "        path = None\n",
+    "    list_path.append({'route':route, 'path':path})\n",
+    "    i=i+1\n",
+    "    if(i%100==0):\n",
+    "        print(i)\n",
+    "df_routes = pd.DataFrame(list_path)\n",
+    "df_routes = df_routes.loc[np.logical_not(df_routes.loc[:,'path'].isnull())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_magok_trips_peak_path = df_magok_trips_peak.merge(df_routes).loc[:,['origin_lat',\n",
+    "                                                                        'origin_lng',\n",
+    "                                                                        'desti_lat',\n",
+    "                                                                        'desti_lng',\n",
+    "                                                                        'route',\n",
+    "                                                                        'path',\n",
+    "                                                                        'rent_minute_of_day',\n",
+    "                                                                        'return_minute_of_day']]\n",
+    "\n",
+    "list_timestamp = []\n",
+    "for i, row in df_magok_trips_peak_path.iterrows():\n",
+    "    start_time = row['rent_minute_of_day'] * 60\n",
+    "    end_time = row['return_minute_of_day'] * 60\n",
+    "    distance = LineString(row['path']).length\n",
+    "    velocity = distance / (end_time - start_time)\n",
+    "    path = row['path']\n",
+    "    timestamp = []\n",
+    "    timestamp.append(start_time)\n",
+    "    current_time = start_time\n",
+    "    for i in range(0,len(path)-2):\n",
+    "        segment_distance = LineString([path[i], path[i+1]]).length\n",
+    "        new_time = int(current_time + segment_distance/velocity)\n",
+    "        timestamp.append(new_time)\n",
+    "        current_time = new_time\n",
+    "    timestamp.append(end_time)\n",
+    "    list_timestamp.append(','.join([str(t) for t in timestamp]))\n",
+    "\n",
+    "df_magok_trips_peak_path.loc[:,'timestamp'] = list_timestamp\n",
+    "df_magok_trips_peak_path.loc[:,'timestamp'] = df_magok_trips_peak_path.loc[:,'timestamp'].apply(lambda x: [int(n) for n in x.split(',')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_magok_trips_peak_path.to_json('../../data/magok_trips_peak_path.json', orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_magok_trips_peak_path = gpd.GeoDataFrame(df_magok_trips_peak_path, geometry=[LineString(path) for path in df_magok_trips_peak_path.loc[:,'path']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_magok_trips_peak_path.drop(columns=['path','timestamp']).to_file('../../data/magok_trips_peak_path.geojson', driver='GeoJSON')"
    ]
   },
   {
